log-output/manifests-with-pv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes: # Define volume
        - name: shared-pingpong
          persistentVolumeClaim:
            claimName: pingpong-claim # name of the volume claim, this will be used in the deployment
      containers:
        - name: log-generator
          image: duysmartum/log-generator:latest
          imagePullPolicy: Always
          volumeMounts: # Mount volume
            - name: shared-pingpong
              mountPath: /usr/src/app/files
        - name: log-reader
          image: duysmartum/log-reader:latest
          imagePullPolicy: Always
          volumeMounts: # Mount volume
            - name: shared-pingpong
              mountPath: /usr/src/app/files
        - name: pingpong-app
          image: duysmartum/pingpong-app:latest
          imagePullPolicy: Always
          volumeMounts: # Mount volume
            - name: shared-pingpong
              mountPath: /usr/src/app/files
