log-output/manifests-with-pv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
      name: log-reader
    - port: 2346
      protocol: TCP
      targetPort: 3001
      name: pingpong-app
    - port: 2347
      protocol: TCP
      targetPort: 3002
      name: log-generator
