log-output/manifests-with-pv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2346
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2347
